--- a/front/package.json
+++ b/front/package.json
@@ -17,7 +17,8 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "proxy": "http://localhost:5000/"
   },
   "browserslist": {
     "production": [
